Documentation edits made through Mintlify web editor

--- a/it-setup/connecting-sharepoint/connecting-commercial-sharepoint.mdx
+++ b/it-setup/connecting-sharepoint/connecting-commercial-sharepoint.mdx
@@ -5,10 +5,16 @@ description: "Integrate SharePoint for centralized document storage and manageme
 
 1. Navigate to [<u>https://admin.teams.microsoft.com/</u>](https://admin.teams.microsoft.com/)
 2. Click on “Users” in the side panel
-3. 
-4. Click on “External access” under Users
-5. Ensure that either “Allow all external domains”, “Allow only specific external domains”, or “Block only specific external domains” is selected
-   1. If “Block all external domains” is selected, GovEagle support will not be accessible via Microsoft Teams chat
-6. If necessary, add the following as an external domain: [<u>goveagle.onmicrosoft.com</u>](http://goveagle.onmicrosoft.com)
-7. Try sending Gabe Villasana ([<u>gabe.villasana@goveagle.onmicrosoft.com</u>](mailto:gabe.villasana@goveagle.onmicrosoft.com)) a chat message on teams
-   1. If you are able to, you have setup the teams permissions properly
+
+   ![CleanShot 2025-08-14 at 14.38.47@2x.png](/images/CleanShot2025-08-14at14.38.47@2x.png)
+3. Click on “External access” under Users
+
+   ![CleanShot 2025-08-14 at 14.39.12@2x.png](/images/CleanShot2025-08-14at14.39.12@2x.png)
+4. Ensure that either “Allow all external domains”, “Allow only specific external domains”, or “Block only specific external domains” is selected. <Tooltip tip="">If “Block all external domains” is selected, GovEagle support will not be accessible via Microsoft Teams chat</Tooltip>
+
+![CleanShot 2025-08-14 at 14.39.27@2x.png](/images/CleanShot2025-08-14at14.39.27@2x.png)
+
+5. If necessary, add the following as an external domain: [<u>goveagle.onmicrosoft.com</u>](http://goveagle.onmicrosoft.com)
+
+   ![CleanShot 2025-08-14 at 14.40.19@2x.png](/images/CleanShot2025-08-14at14.40.19@2x.png)
+6. Try sending Gabe Villasana ([<u>gabe.villasana@goveagle.onmicrosoft.com</u>](mailto:gabe.villasana@goveagle.onmicrosoft.com)) a chat message on teams. If you are able to, you have setup the teams permissions properly
