--- a/it-setup/connecting-sharepoint/commercial.mdx
+++ b/it-setup/connecting-sharepoint/commercial.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Connecting SharePoint"
-description: "Integrate SharePoint for centralized document storage and management"
+title: "Connecting SharePoint - Commercial"
+description: "Integrate SharePoint for centralized document storage and management in Commercial environments"
 ---
 
 1. Navigate to [<u>https://admin.teams.microsoft.com/</u>](https://admin.teams.microsoft.com/)
