--- a/it-setup/setting-up-teams-chat/gcc-gcchigh.mdx
+++ b/it-setup/setting-up-teams-chat/gcc-gcchigh.mdx
@@ -14,11 +14,12 @@ description: "Integrate SharePoint for centralized document storage and manageme
 
 ## GCCHigh Environment
 
-For GCCHigh environments, the process differs due to enhanced security requirements:
-
-1. Navigate to your GCCHigh admin portal at [<u>https://admin.teams.microsoft.us/</u>](https://admin.teams.microsoft.us/)
-2. Follow similar steps as above, but note that external domain access may be more restricted
-3. Contact your security administrator for GCCHigh-specific SharePoint integration requirements
+1. Navigate to [<u>https://admin.gov.teams.microsoft.us/dashboard</u>](https://admin.gov.teams.microsoft.us/dashboard)
+2. Click on "Users" in the side panel
+3. Click on "External access" under Users
+4. Ensure that either "Allow all external domains", "Allow only specific external domains", or "Block only specific external domains" is selected. <Tooltip tip="">If "Block all external domains" is selected, GovEagle support will not be accessible via Microsoft Teams chat</Tooltip>
+5. If necessary, add the following as an external domain: [<u>zenfetch.onmicrosoft.us</u>](http://zenfetch.onmicrosoft.us)
+6. Try sending Gabe Villasana ([<u>gabe.villasana@zenfetch.onmicrosoft.us</u>](mailto:gabe.villasana@zenfetch.onmicrosoft.us)) a chat message on teams. If you are able to, you have setup the teams permissions properly
 
 <Note>
 GCCHigh environments have additional security controls that may require special configuration. Please consult with your IT security team for compliance requirements.
